--- a/notebooks/interactions.ipynb
+++ b/notebooks/interactions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7c159cec",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c343ea01",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "22fdab25",
    "metadata": {},
    "outputs": [],
@@ -49,12 +49,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "4cda12dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "userId",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "userType",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "historySize",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "history",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "timestampHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "numberOfClicksHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "timeOnPageHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "scrollPercentageHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "pageVisitsCountHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "timestampHistory_new",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "cecf4350-c2a5-4e37-8882-18e70855fded",
+       "rows": [
+        [
+         "0",
+         "fbb963d61eb8149e7f43b1bd905457ba5e106a830ddc27288434101e7252ef57",
+         "Non-Logged",
+         "2",
+         "80aa7bb2-adce-4a55-9711-912c407927a1, d9e5f15d-b441-4d8b-bee4-462b106d3916",
+         "1657908085200, 1659634203762",
+         "0, 0",
+         "71998, 115232",
+         "81.58, 73.36",
+         "1, 1",
+         "1657908085200, 1659634203762"
+        ],
+        [
+         "1",
+         "17f1083e6079b0f28f7820a6803583d1c1b405c0718b11a18d30b1620f643b23",
+         "Non-Logged",
+         "2",
+         "19ba89fc-1e06-4c5d-9c57-4a3088dc0511, e273dba4-136c-45fb-bdd6-0cc57b13aaf0",
+         "1657111508570, 1657481309920",
+         "68, 12",
+         "131495, 43733",
+         "51.74, 35.49",
+         "1, 1",
+         "1657111508570, 1657481309920"
+        ],
+        [
+         "2",
+         "528a8d7a2af73101da8d6709c1ec875b449a5a58749a998ae2d949c10d1772df",
+         "Non-Logged",
+         "2",
+         "59a61a8a-cc52-453f-b1cd-2bd019e9d574, a0562805-c7d1-4ffd-b622-87c50ae006f4",
+         "1657823890328, 1660141444328",
+         "55, 9",
+         "159042, 10336",
+         "62.19, 48.28",
+         "1, 1",
+         "1657823890328, 1660141444328"
+        ],
+        [
+         "3",
+         "2dd18b58a634a4e77181a202cf152df6169dfb3e4230ef4dc41ea9216be40698",
+         "Non-Logged",
+         "2",
+         "233f8238-2ce0-470f-a9d5-0e0ac530382a, 037155f4-4db8-4f07-8d0a-3e559605b8ad",
+         "1656963373076, 1657091888917",
+         "0, 0",
+         "193579, 20519",
+         "31.03, 31.9",
+         "1, 1",
+         "1656963373076, 1657091888917"
+        ],
+        [
+         "4",
+         "97e1439d485b0630e12818d3df84ff67d08475ef6ebeb08e5354779ad6a30fdb",
+         "Logged",
+         "2",
+         "385044ad-3876-4188-83fa-f560435c1a9c, 2f754502-7014-488b-88c7-d41328d5e80d",
+         "1657618607633, 1659536839832",
+         "57, 38",
+         "220000, 130000",
+         "52.65, 53.37",
+         "1, 1",
+         "1657618607633, 1659536839832"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -186,7 +318,7 @@
        "4            52.65, 53.37                   1, 1  1657618607633, 1659536839832  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "e9c9c95c",
    "metadata": {},
    "outputs": [
@@ -233,12 +365,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "44407e67",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "userId",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "userType",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "historySize",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "history",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "timestampHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "numberOfClicksHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "timeOnPageHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "scrollPercentageHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "pageVisitsCountHistory",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "timestampHistory_new",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "c90d42ec-e74e-43e5-a9d0-618f4b58eff1",
+       "rows": [
+        [
+         "0",
+         "fbb963d61eb8149e7f43b1bd905457ba5e106a830ddc27288434101e7252ef57",
+         "Non-Logged",
+         "2",
+         "80aa7bb2-adce-4a55-9711-912c407927a1, d9e5f15d-b441-4d8b-bee4-462b106d3916",
+         "1657908085200, 1659634203762",
+         "0, 0",
+         "71998, 115232",
+         "81.58, 73.36",
+         "1, 1",
+         "1657908085200, 1659634203762"
+        ],
+        [
+         "1",
+         "17f1083e6079b0f28f7820a6803583d1c1b405c0718b11a18d30b1620f643b23",
+         "Non-Logged",
+         "2",
+         "19ba89fc-1e06-4c5d-9c57-4a3088dc0511, e273dba4-136c-45fb-bdd6-0cc57b13aaf0",
+         "1657111508570, 1657481309920",
+         "68, 12",
+         "131495, 43733",
+         "51.74, 35.49",
+         "1, 1",
+         "1657111508570, 1657481309920"
+        ],
+        [
+         "2",
+         "528a8d7a2af73101da8d6709c1ec875b449a5a58749a998ae2d949c10d1772df",
+         "Non-Logged",
+         "2",
+         "59a61a8a-cc52-453f-b1cd-2bd019e9d574, a0562805-c7d1-4ffd-b622-87c50ae006f4",
+         "1657823890328, 1660141444328",
+         "55, 9",
+         "159042, 10336",
+         "62.19, 48.28",
+         "1, 1",
+         "1657823890328, 1660141444328"
+        ],
+        [
+         "3",
+         "2dd18b58a634a4e77181a202cf152df6169dfb3e4230ef4dc41ea9216be40698",
+         "Non-Logged",
+         "2",
+         "233f8238-2ce0-470f-a9d5-0e0ac530382a, 037155f4-4db8-4f07-8d0a-3e559605b8ad",
+         "1656963373076, 1657091888917",
+         "0, 0",
+         "193579, 20519",
+         "31.03, 31.9",
+         "1, 1",
+         "1656963373076, 1657091888917"
+        ],
+        [
+         "4",
+         "97e1439d485b0630e12818d3df84ff67d08475ef6ebeb08e5354779ad6a30fdb",
+         "Logged",
+         "2",
+         "385044ad-3876-4188-83fa-f560435c1a9c, 2f754502-7014-488b-88c7-d41328d5e80d",
+         "1657618607633, 1659536839832",
+         "57, 38",
+         "220000, 130000",
+         "52.65, 53.37",
+         "1, 1",
+         "1657618607633, 1659536839832"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -370,7 +634,7 @@
        "4            52.65, 53.37                   1, 1  1657618607633, 1659536839832  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "69a53315",
    "metadata": {},
    "outputs": [],
@@ -407,12 +671,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "f4eb90e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "userId",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "userType",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "historySize",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "history",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "timestampHistory",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "numberOfClicksHistory",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "timeOnPageHistory",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "scrollPercentageHistory",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "pageVisitsCountHistory",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "timestampHistory_new",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "8ae7ba01-31c7-48fd-99c1-cf21dbe511fe",
+       "rows": [
+        [
+         "0",
+         "fbb963d61eb8149e7f43b1bd905457ba5e106a830ddc27288434101e7252ef57",
+         "Non-Logged",
+         "2",
+         "['80aa7bb2-adce-4a55-9711-912c407927a1', 'd9e5f15d-b441-4d8b-bee4-462b106d3916']",
+         "['1657908085200', '1659634203762']",
+         "['0', '0']",
+         "['71998', '115232']",
+         "['81.58', '73.36']",
+         "['1', '1']",
+         "1657908085200, 1659634203762"
+        ],
+        [
+         "1",
+         "17f1083e6079b0f28f7820a6803583d1c1b405c0718b11a18d30b1620f643b23",
+         "Non-Logged",
+         "2",
+         "['19ba89fc-1e06-4c5d-9c57-4a3088dc0511', 'e273dba4-136c-45fb-bdd6-0cc57b13aaf0']",
+         "['1657111508570', '1657481309920']",
+         "['68', '12']",
+         "['131495', '43733']",
+         "['51.74', '35.49']",
+         "['1', '1']",
+         "1657111508570, 1657481309920"
+        ],
+        [
+         "2",
+         "528a8d7a2af73101da8d6709c1ec875b449a5a58749a998ae2d949c10d1772df",
+         "Non-Logged",
+         "2",
+         "['59a61a8a-cc52-453f-b1cd-2bd019e9d574', 'a0562805-c7d1-4ffd-b622-87c50ae006f4']",
+         "['1657823890328', '1660141444328']",
+         "['55', '9']",
+         "['159042', '10336']",
+         "['62.19', '48.28']",
+         "['1', '1']",
+         "1657823890328, 1660141444328"
+        ],
+        [
+         "3",
+         "2dd18b58a634a4e77181a202cf152df6169dfb3e4230ef4dc41ea9216be40698",
+         "Non-Logged",
+         "2",
+         "['233f8238-2ce0-470f-a9d5-0e0ac530382a', '037155f4-4db8-4f07-8d0a-3e559605b8ad']",
+         "['1656963373076', '1657091888917']",
+         "['0', '0']",
+         "['193579', '20519']",
+         "['31.03', '31.9']",
+         "['1', '1']",
+         "1656963373076, 1657091888917"
+        ],
+        [
+         "4",
+         "97e1439d485b0630e12818d3df84ff67d08475ef6ebeb08e5354779ad6a30fdb",
+         "Logged",
+         "2",
+         "['385044ad-3876-4188-83fa-f560435c1a9c', '2f754502-7014-488b-88c7-d41328d5e80d']",
+         "['1657618607633', '1659536839832']",
+         "['57', '38']",
+         "['220000', '130000']",
+         "['52.65', '53.37']",
+         "['1', '1']",
+         "1657618607633, 1659536839832"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -544,7 +940,7 @@
        "4          [52.65, 53.37]                 [1, 1]  1657618607633, 1659536839832  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ffae2402",
    "metadata": {},
    "outputs": [
@@ -618,12 +1014,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "67998a88",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "userId",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "userType",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "itemId",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "timestamp",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "clicks",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "visits",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "13218729-496d-4791-a536-7ab39cda2562",
+       "rows": [
+        [
+         "0",
+         "fbb963d61eb8149e7f43b1bd905457ba5e106a830ddc27288434101e7252ef57",
+         "Non-Logged",
+         "80aa7bb2-adce-4a55-9711-912c407927a1",
+         "1657908085200",
+         "0",
+         "1"
+        ],
+        [
+         "1",
+         "fbb963d61eb8149e7f43b1bd905457ba5e106a830ddc27288434101e7252ef57",
+         "Non-Logged",
+         "d9e5f15d-b441-4d8b-bee4-462b106d3916",
+         "1659634203762",
+         "0",
+         "1"
+        ],
+        [
+         "2",
+         "17f1083e6079b0f28f7820a6803583d1c1b405c0718b11a18d30b1620f643b23",
+         "Non-Logged",
+         "19ba89fc-1e06-4c5d-9c57-4a3088dc0511",
+         "1657111508570",
+         "68",
+         "1"
+        ],
+        [
+         "3",
+         "17f1083e6079b0f28f7820a6803583d1c1b405c0718b11a18d30b1620f643b23",
+         "Non-Logged",
+         "e273dba4-136c-45fb-bdd6-0cc57b13aaf0",
+         "1657481309920",
+         "12",
+         "1"
+        ],
+        [
+         "4",
+         "528a8d7a2af73101da8d6709c1ec875b449a5a58749a998ae2d949c10d1772df",
+         "Non-Logged",
+         "59a61a8a-cc52-453f-b1cd-2bd019e9d574",
+         "1657823890328",
+         "55",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -717,7 +1205,7 @@
        "4  59a61a8a-cc52-453f-b1cd-2bd019e9d574  1657823890328     55      1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "7caf3d77",
    "metadata": {},
    "outputs": [],
